# blackboard_course_manager

./: .gitignore  Cargo.toml  README.md  TDT4102_files.json  TODO.md  _1214272_1_attachments.json
src/: auth.rs  bb_course.rs  bb_course_manager.rs  bb_session.rs  bbcm.rs  blackboard_course_manager.rs  cookie_session.rs  course.rs  course_manager.rs  download.rs  lib.rs  main.rs  subject.rs  tests.rs
src/bb_course/: bb_announcement.rs  bb_content.rs  bb_gradebook.rs  filename_utils.rs  predicate_utils.rs
src/bb_course/bb_announcement/: bb_user.rs
src/bb_course/bb_content/: bb_attachment.rs  bb_content_classes.rs  time_utils.rs
src/bb_course_manager/: bb_course.rs
src/bb_course_manager/bb_course/: bb_content.rs  bb_session.rs
src/bb_course_manager/bb_course/bb_content/: bb_attachment.rs
src/bb_session/: download.rs
src/blackboard_course_manager/: blackboard_course.rs  input_utils.rs
src/blackboard_course_manager/blackboard_course/: blackboard_announcement.rs  blackboard_content.rs  blackboard_definitions.rs  blackboard_session.rs  download.rs  predicate_utils.rs
src/blackboard_course_manager/blackboard_course/blackboard_session/: download.rs
src/cookie_session/: download.rs
src/course_manager/: course.rs
src/course_manager/course/: blackboard_course.rs  wiki_course.rs
src/course_manager/course/blackboard_course/: appointment_evaluators.rs  blackboard_definitions.rs  blackboard_session.rs  filename_utils.rs  (+1 more)
src/subject/: appointment_url.rs  fetch.rs
src/utils/: filename_utils.rs  input_utils.rs  mod.rs  predicate_utils.rs  time_utils.rs
